changed html font

--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title><i>DICE SIMULATOR</i></title>
+		<title>DICE SIMULATOR</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
-		<body bgcolor="#FFFFFF">
 		<header>
-			<h1><FONT FACE="PTSerif-Bold-48">DICE SIMULATOR</FONT></h1>
+			<h1><FONT FACE="PTSerif-Bold-50">DICE SIMULATOR</FONT></h1>
 		</header>
 			<section id="content">
 				<canvas id="Dice" data-processing-sources="Dice.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		  <FONT FACE="CenturyGothic-Bold-48"><b>click to roll</b> ~Celena Chang</FONT>
+		  <b>click to roll</b> ~Celena Chang
 	    </footer>
 	</body>
 </html>
