--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1><FONT FACE="PTSerif-Bold-50">DICE SIMULATOR</FONT></h1>
+			<h1>DICE SIMULATOR</h1>
 		</header>
 			<section id="content">
 				<canvas id="Dice" data-processing-sources="Dice.pde">
